samples/_failures_safe/1761322372_a51306_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d82648e.c: In function ‘main’:
./samples/SAFE/__tmp_4d82648e.c:160:17: error: expected expression at end of input
  160 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_4d82648e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d82648e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d82648e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d82648e.c:160:17: error: expected declaration or statement at end of input
